feat(frontend): adicionado formulário de cadastro
adicionado formulário de cadastro ao front-end da aplicação

--- a/mymanga-frontend/loja/src/app/app.html
+++ b/mymanga-frontend/loja/src/app/app.html
@@ -17,4 +17,16 @@
 
 <router-outlet></router-outlet>
 
-<footer>Loja de teste da disciplina web noite</footer>
+<div>
+  <img src="./assets/logo.jpg" width="50px" />
+  Hardware Store
+  <nav>
+      <a href="./vitrine">Vitrine</a>|
+      <a href="./sobre">Sobre</a>|
+      <a href="./contato">Contato</a>|
+      <a href="./cadastro">Cadastro</a> </nav> 
+</div>
+<router-outlet />
+<footer>
+  <p align="center">Loja de Teste 4 ads</p>
+</footer>
