--- a/mymanga-frontend/mymanga-frontend/src/app/components/header/header.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/components/header/header.html
@@ -1,1 +1,52 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">MyManga</a>
+    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Início</a>
+        </li>
+        
+        <li class="nav-item" *ngIf="!isAuthenticated">
+          <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+        </li>
+        <li class="nav-item" *ngIf="!isAuthenticated">
+          <a class="nav-link" routerLink="/register" routerLinkActive="active">Registrar</a>
+        </li>
+        
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a class="nav-link" routerLink="/profile" routerLinkActive="active">Perfil</a>
+        </li>
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a class="nav-link" routerLink="/orders" routerLinkActive="active">Pedidos</a>
+        </li>
+        
+        <li class="nav-item" *ngIf="isAdmin">
+          <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin</a>
+        </li>
+      </ul>
+      
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link position-relative" routerLink="/cart">
+            🛒 Carrinho
+            <span *ngIf="getQuantidadeItens() > 0" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+              {{ getQuantidadeItens() }}
+            </span>
+          </a>
+        </li>
+        
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <button class="btn btn-outline-light ms-2" (click)="logout()">
+            Sair
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
